--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,36 +1,42 @@
-# This is a basic workflow to help you get started with Actions
+name: Increment Version and Create Tag
 
-name: CI
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v2
+      
+    - name: Set up Git
+      run: |
+        git config --global user.name "Mamadou Sadio"
+        git config --global user.email "devmodou@gmail.com"
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+    - name: Get latest tag
+      id: latest_tag
+      run: |
+        git fetch --tags
+        latestTag=$(git describe --abbrev=0 --tags "0.0.0.*" 2>/dev/null) || latestTag="0.0.0.0"
+        echo "Latest tag: $latestTag"
+        echo "::set-output name=latest_tag::$latestTag"
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+    - name: Increment version
+      id: increment_version
+      run: |
+        previousTag=${{ steps.latest_tag.outputs.latest_tag }}
+        IFS='.' read -r -a versionParts <<< "${previousTag}"
+        nextVersion=$(printf "%d.%d.%d.%d" "${versionParts[0]}" "${versionParts[1]}" "${versionParts[2]}" "$((10#${versionParts[3]} + 1))")
+        echo "Next version: $nextVersion"
+        echo "::set-output name=next_version::$nextVersion"
+
+    - name: Create and push new tag
+      if: ${{ steps.increment_version.outputs.next_version != '0.0.0.0' }}
+      run: |
+        git tag -a ${{ steps.increment_version.outputs.next_version }} -m "Release ${{ steps.increment_version.outputs.next_version }}"
+        git push origin ${{ steps.increment_version.outputs.next_version }}
