--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -38,7 +38,16 @@ jobs:
     #     git tag "$NEW_TAG"
     #     git push --tags
     #     echo "::set-output name=versioned_tag::$NEW_TAG"
-
+    - uses: trstringer/manual-approval@v1
+      with:
+        secret: ${{ github.TOKEN }}
+        approvers: sencloudpl
+        minimum-approvals: 1
+        issue-title: "Deploying v1.3.5 to prod from staging"
+        issue-body: "Please approve or deny the deployment of version v1.3.5."
+        exclude-workflow-initiator-as-approver: false
+        additional-approved-words: 'oui'
+        additional-denied-words: ''
     
   staging-approval:
     runs-on: ubuntu-latest
