--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -44,7 +44,6 @@ jobs:
 
   staging-approval:
     runs-on: ubuntu-latest
-    environment: 'Staging'
     needs:
       - staging-check
     if: env.STAGING_DEPLOY_CONFIRMED == 'YES'
@@ -53,7 +52,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Ask for staging deployment approval
-        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: |
           echo "Do you want to deploy to staging environment? (YES/NO)"
           read -r confirmation
@@ -67,8 +66,7 @@ jobs:
             exit 0
           fi
 
-      - name: Merge master into staging
-        if: ${{ steps.staging-approval.outputs.approved == 'YES' }}
+      - name: Merge main into staging
         run: |
           echo Start merge,
           git checkout staging
