--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,34 +27,34 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Ask for staging deployment confirmation
-        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: |
-          echo "Do you want to deploy to staging environment? (YES/NO)"
+          echo "Do you want to deploy to the staging environment? (YES/NO)"
           read -r confirmation
 
           if [[ $confirmation == "YES" ]]; then
             echo "Staging deployment is confirmed."
             echo "Proceeding with the staging approval..."
-            echo "YES" >> $GITHUB_ENV
+            echo "STAGING_DEPLOY_CONFIRMED=YES" >> $GITHUB_ENV
           else
             echo "Staging deployment is not confirmed."
             echo "Skipping the staging approval and deployment..."
-            echo "NO" >> $GITHUB_ENV
+            echo "STAGING_DEPLOY_CONFIRMED=NO" >> $GITHUB_ENV
           fi
 
   staging-approval:
     runs-on: ubuntu-latest
     needs:
       - staging-check
-    if: env.STAGING_DEPLOY_CONFIRMED == 'YES'
+    if: ${{ env.STAGING_DEPLOY_CONFIRMED == 'YES' }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Ask for staging deployment approval
-        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: |
-          echo "Do you want to deploy to staging environment? (YES/NO)"
+          echo "Do you want to deploy to the staging environment? (YES/NO)"
           read -r confirmation
 
           if [[ $confirmation == "YES" ]]; then
