--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -10,43 +10,44 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Set up Git
-      run: |
-        git config --global user.name "Mamadou Sadio"
-        git config --global user.email "devmodou@gmail.com"
+      - name: Set up Git
+        run: |
+          git config --global user.name "Mamadou Sadio"
+          git config --global user.email "devmodou@gmail.com"
 
   staging-check:
     runs-on: ubuntu-latest
     needs:
       - build
+    outputs:
+      deployment-confirmed: ${{ steps.confirmation.outputs.confirmed }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Ask for staging deployment confirmation
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        id: confirmation
         run: |
           echo "Do you want to deploy to the staging environment? (YES/NO)"
           read -r confirmation
 
           if [[ $confirmation == "YES" ]]; then
             echo "Staging deployment is confirmed."
-            echo "Proceeding with the staging approval..."
-            echo "STAGING_DEPLOY_CONFIRMED=YES" >> $GITHUB_ENV
+            echo "::set-output name=confirmed::YES"
           else
             echo "Staging deployment is not confirmed."
-            echo "Skipping the staging approval and deployment..."
-            echo "STAGING_DEPLOY_CONFIRMED=NO" >> $GITHUB_ENV
+            echo "::set-output name=confirmed::NO"
           fi
 
   staging-approval:
     runs-on: ubuntu-latest
     needs:
       - staging-check
-    if: ${{ env.STAGING_DEPLOY_CONFIRMED == 'YES' }}
+    if: needs.staging-check.outputs.deployment-confirmed == 'YES'
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
