--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -10,13 +10,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-      - name: Set up Git
-        run: |
-          git config --global user.name "Mamadou Sadio"
-          git config --global user.email "devmodou@gmail.com"
+    - name: Set up Git
+      run: |
+        git config --global user.name "Mamadou Sadio"
+        git config --global user.email "devmodou@gmail.com"
 
   staging-check:
     runs-on: ubuntu-latest
@@ -46,14 +46,14 @@ jobs:
   staging-approval:
     runs-on: ubuntu-latest
     needs:
+      - build
       - staging-check
-    if: needs.staging-check.outputs.deployment-confirmed == 'YES'
+    if: needs.staging-check.outputs.deployment-confirmed == 'YES' && github.event_name == 'push' && github.ref == 'refs/heads/main'
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Ask for staging deployment approval
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: |
           echo "Do you want to deploy to the staging environment? (YES/NO)"
           read -r confirmation
