--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -10,13 +10,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Set up Git
-      run: |
-        git config --global user.name "Mamadou Sadio"
-        git config --global user.email "devmodou@gmail.com"
+      - name: Set up Git
+        run: |
+          git config --global user.name "Mamadou Sadio"
+          git config --global user.email "devmodou@gmail.com"
 
   staging-check:
     runs-on: ubuntu-latest
@@ -37,35 +37,47 @@ jobs:
 
           if [[ $confirmation == "YES" ]]; then
             echo "Staging deployment is confirmed."
-            echo "::set-output name=confirmed::YES"
+            echo "confirmed=YES" >> $GITHUB_ENV
           else
             echo "Staging deployment is not confirmed."
-            echo "::set-output name=confirmed::NO"
+            echo "confirmed=NO" >> $GITHUB_ENV
           fi
 
   staging-approval:
     runs-on: ubuntu-latest
     needs:
-      - build
       - staging-check
-    if: needs.staging-check.outputs.deployment-confirmed == 'YES' && github.event_name == 'push' && github.ref == 'refs/heads/main'
+    if: needs.staging-check.outputs.deployment-confirmed == 'YES'
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Ask for staging deployment approval
+      - name: Create Deployment
+        id: create_deployment
         run: |
-          echo "Do you want to deploy to the staging environment? (YES/NO)"
-          read -r confirmation
+          echo "Creating deployment..."
+          response=$(curl -X POST \
+            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Accept: application/vnd.github.v3+json" \
+            https://api.github.com/repos/${{ github.repository }}/deployments \
+            -d '{"ref": "refs/heads/main", "environment": "staging"}')
+          echo "::set-output name=deployment_id::$(echo $response | jq '.id')"
 
-          if [[ $confirmation == "YES" ]]; then
-            echo "Staging deployment is approved."
-            echo "Proceeding with the deployment..."
-          else
-            echo "Staging deployment is not approved."
-            echo "Skipping the staging deployment..."
-            exit 0
-          fi
+      - name: Ask for deployment approval
+        if: always()  # Always run this step, even if previous steps fail
+        run: |
+          deployment_id=${{ steps.create_deployment.outputs.deployment_id }}
+          echo "Deployment created. Link: https://github.com/${{ github.repository }}/deployments/${deployment_id}"
+          echo "Please manually approve the deployment by visiting the link above and clicking 'Approve'."
+
+  merge-to-staging:
+    runs-on: ubuntu-latest
+    needs:
+      - staging-approval
+    if: needs.staging-check.outputs.deployment-confirmed == 'YES' && needs.staging-approval.result == 'success'
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
       - name: Merge main into staging
         run: |
