from local machine

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest 
 
     steps:
       - name: Checkout code
@@ -68,7 +68,7 @@ jobs:
         run: |
           deployment_id=${{ steps.create_deployment.outputs.deployment_id }}
           echo "Deployment created. Link: https://github.com/${{ github.repository }}/deployments/${deployment_id}"
-          echo "Please manually approve the deployment by visiting the link above and clicking 'Approve'."
+          echo "Please manually approve the deployment by visiting the link above and clickng 'Approve'."
 
   merge-to-staging:
     runs-on: ubuntu-latest
