--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,4 +1,4 @@
-name: Manual Approve and Create Tag
+name: Manual Approval
 
 on:
   push:
@@ -10,85 +10,43 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-      - name: Set up Git
-        run: |
-          git config --global user.name "Mamadou Sadio"
-          git config --global user.email "devmodou@gmail.com"
+    - name: Set up Git
+      run: |
+        git config --global user.name "Mamadou Sadio"
+        git config --global user.email "devmodou@gmail.com"
 
-  staging-check:
-    runs-on: ubuntu-latest
-    needs:
-      - build
-    outputs:
-      deployment-confirmed: ${{ steps.confirmation.outputs.confirmed }}
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Ask for staging deployment confirmation
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-        id: confirmation
-        run: |
-          echo "Do you want to deploy to the staging environment? (YES/NO)"
-          read -r confirmation
-
-          if [[ $confirmation == "YES" ]]; then
-            echo "Staging deployment is confirmed."
-            echo "confirmed=YES" >> $GITHUB_ENV
-          else
-            echo "Staging deployment is not confirmed."
-            echo "confirmed=NO" >> $GITHUB_ENV
-          fi
 
   staging-approval:
     runs-on: ubuntu-latest
+    environment: 'Staging'
     needs:
       - build
-      - staging-check
-    if: needs.staging-check.outputs.deployment-confirmed == 'YES'
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Create Deployment
-        id: create_deployment
+      - name: Ask for staging deployment approval
+        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
         run: |
-          echo "Creating deployment..."
-          response=$(curl -X POST \
-            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-            -H "Accept: application/vnd.github.v3+json" \
-            https://api.github.com/repos/${{ github.repository }}/deployments \
-            -d '{"ref": "refs/heads/main", "environment": "staging"}')
-          echo "::set-output name=deployment_id::$(echo $response | jq '.id')"
+          echo "Do you want to deploy to staging environment? (YES/NO)"
+          read -r confirmation
 
-      - name: Ask for deployment approval
-        if: always()  # Always run this step, even if previous steps fail
+          if [[ $confirmation == "YES" ]]; then
+            echo "Staging deployment is approved."
+            echo "Proceeding with the deployment..."
+          else
+            echo "Staging deployment is not approved."
+            echo "Skipping the staging deployment..."
+            exit 0
+          fi
+
+      - name: Merge master into staging
+        if: ${{ steps.staging-approval.outputs.approved == 'YES' }}
         run: |
-          deployment_id=${{ steps.create_deployment.outputs.deployment_id }}
-          echo "Deployment created. Link: https://github.com/${{ github.repository }}/deployments/${deployment_id}"
-          echo "Please manually approve the deployment by visiting the link above and clicking 'Approve'."
-
-      - name: Wait for deployment approval
-        if: always()  # Always run this step, even if previous steps fail
-        run: |
-          echo "Waiting for deployment approval..."
-          sleep 10  # Adjust the sleep duration as needed
-
-  merge-to-staging:
-    runs-on: ubuntu-latest
-    needs:
-      - staging-approval
-    if: needs.staging-check.outputs.deployment-confirmed == 'YES' && needs.staging-approval.result == 'success'
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Merge main into staging
-        run: |
-          echo "Start merge,"
+          echo Start merge,
           git checkout staging
           git merge main
           git push origin staging
