--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -20,19 +20,24 @@ jobs:
 
     - name: Get the latest tag
       id: get_latest_tag
-      run: echo ::set-output name=latest_tag::$(git describe --abbrev=0 --tags)
+      run: |
+        latest_tag=$(git describe --abbrev=0 --tags 2>/dev/null || echo "0.0.0")
+        echo "Latest tag: $latest_tag"
+        echo "::set-output name=latest_tag::$latest_tag" >> $GITHUB_ENV
 
     - name: Determine next version
       id: bump_version
       run: |
         # Split the version number into parts
-        IFS='.' read -r major minor patch build <<< "${{ steps.get_latest_tag.outputs.latest_tag }}"
+        IFS='.' read -r major minor patch build <<< "${{ needs.build.outputs.latest_tag }}"
 
         # Increment the build number
         build=$((build + 1))
 
         # Set the new version as an output
-        echo ::set-output name=new_version::"$major.$minor.$patch.$build"
+        new_version="$major.$minor.$patch.$build"
+        echo "New version: $new_version"
+        echo "::set-output name=new_version::$new_version" >> $GITHUB_ENV
 
   staging-approval:
     runs-on: ubuntu-latest
@@ -71,5 +76,5 @@ jobs:
           echo "New version: $version"
 
           # Tag the merge commit with the new version
-          git tag "$version"
+          git tag "$version" "${{ github.sha }}"
           git push origin --tags
