--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -71,9 +71,6 @@ jobs:
             exit 0
           fi
 
-      - name: Create staging branch (if not exists)
-        run: git show-ref --verify --quiet refs/heads/staging || git branch staging
-
       - name: Fetch the remote changes
         run: git fetch origin
 
@@ -82,13 +79,13 @@ jobs:
         run: |
           echo Start merge,
           git checkout staging
-          git merge origin/staging --no-edit
+          git merge origin/main --no-edit --allow-unrelated-histories
           git push origin staging
 
           # Get the new version from the build job output
           version="${{ needs.build.outputs.new_version }}"
           echo "New version: $version"
 
-          # Tag the merge commit with the new version v
+          # Tag the merge commit with the new version 
           git tag "$version" "${{ github.sha }}"
           git push origin --tags
