test merging in staging

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -71,26 +71,21 @@ jobs:
             exit 0
           fi
 
-      - name: Set up Git for the runner environment
-        run: |
-          git config user.name "Mamadou Sadio"
-          git config user.email "devmodou@gmail.com"
-
       - name: Fetch the remote changes
         run: git fetch origin
 
-      - name: Merge main into staging 
+      - name: Merge main into staging
         if: ${{ needs.build.outputs.latest_tag }} != '0.0.0' && env.deploy_approval == 'YES'
         run: |
           echo Start merge,
-          git checkout -b staging origin/staging
-          git merge origin/main --no-edit
+          git checkout staging
+          git merge origin/main --no-edit --allow-unrelated-histories
           git push origin staging
 
           # Get the new version from the build job output
           version="${{ needs.build.outputs.new_version }}"
           echo "New version: $version"
 
-          # Tag the merge commit with the new version 
+          # Tag the merge commit with the new version
           git tag "$version" "${{ github.sha }}"
           git push origin --tags
