--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -78,6 +78,11 @@ jobs:
         if: ${{ needs.build.outputs.latest_tag }} != '0.0.0' && env.deploy_approval == 'YES'
         run: |
           echo Start merge,
+
+          # Set up Git for the runner environment (again inside the 'staging-approval' job)
+          git config user.name "${{ github.actor }}"
+          git config user.email "devmodou@gmail.com"
+
           git checkout staging
           git merge origin/main --no-edit --allow-unrelated-histories
           git push origin staging
